# zipboard-docs-audit

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/analyzer/: article_analysis.py  competitor_analysis.py  gap_analysis.py
src/api/: endpoints.py
src/core/: config.py  dependency.py
src/models/: analysis_schema.py  api.py  llm_schema.py  scraping_schema.py
src/scraper/: scraper.py
src/services/: llm_service.py  sheet_service.py
src/utils/: mapping_utils.py  sheet_utils.py
