[project]
name = "zipboard-docs-audit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.128.1",
    "groq>=1.0.0",
    "gspread>=6.2.1",
    "gspread-formatting>=1.2.1",
    "httpx>=0.28.1",
    "openai>=2.16.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "ruff>=0.15.0",
    "uvicorn>=0.40.0",
]
